--- a/index.html
+++ b/index.html
@@ -38,19 +38,33 @@
         #tableContainer {
             padding: 20px;
         }
+
+        #paginationContainer {
+          display: flex;
+          justify-content: center;
+        }
     </style>
   </head>
 
   <body>
     <div id="spinnerContainer">
-        <span class="loader"></span>
+      <span class="loader"></span>
     </div>
-
+    <div class="mb-3">
+      <input type="search" class="form-control" onkeyup="filterPeople(this.value)">
+    </div>
     <div id="tableContainer">
-        <table class="table table-bordered border border-danger-subtle" id="tableElement"></table>
+      <table class="table table-bordered" id="tableElement"></table>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <div id="paginationContainer">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination" id="paginationElement">
+        </ul>
+      </nav>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
     <script src="./index.js"></script>
   </body>
-
 </html>
